k8s/overlays/dev/dnmonster-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnmonster 
spec:
  replicas: 2
