k8s/overlays/dev/monstericon-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: monstericon
  labels:
    app: monsterstack
spec:
  type: NodePort
  ports:
  - port: 5000
